Sort course structure based on order
